crates/bitnet-receipts/tests/snapshots/snapshot_tests__schema_version_constant.snap
---
source: crates/bitnet-receipts/tests/snapshot_tests.rs
expression: RECEIPT_SCHEMA_VERSION
---
1.0.0
